# squirrel_test

./: .gitignore  CMakeLists.txt  main.cpp
include/simplesquirrel/: type.hpp
lib/: simplesquirrel.lib  simplesquirrel_d.lib  simplesquirrel_static.lib  simplesquirrel_static_d.lib  sq.lib  sqstdlib.lib  squirrel.lib
scripts/: Hello.nut  Main.nut
